# pangloss

./: .editorconfig  Cargo.toml  README.md  justfile
assets/yomitan/styles/: structured-content.css
docs/: formats.md
src/: cli.rs  context.rs  encryption.rs  lib.rs  main.rs  registry.rs  utils.rs
src/formats/: html.rs  json.rs  mod.rs  text.rs
src/formats/mdict/: mod.rs  reader.rs  writer.rs
src/formats/stardict/: mod.rs  reader.rs  sts.rs  writer.rs
src/formats/yomitan/: mod.rs  reader.rs  writer.rs
src/formats/yomitan/model/: mod.rs  tag_bank.rs  term_bank.rs  term_meta_bank.rs
src/formats/yomitan/renderer/: mod.rs  term_bank.rs  term_meta_bank.rs
src/glossary/: alt_map.rs  glossary_info.rs  metadata.rs  mod.rs
src/glossary/entry/: conversion.rs  data_entry.rs  definition.rs  mod.rs  transformer.rs
src/transform/: css_transform.rs  entry_transform.rs  mod.rs
tests/: data_entry.rs  glossary.rs  mod.rs
tests/fixtures/formats/: dict.json
tests/fixtures/formats/mdict/: 001-entry1-uncompressed.mdx  001-entry1.mdx  003-entry3-uncompressed.mdx
tests/fixtures/formats/stardict/01-base/: dict.dict  dict.idx  dict.ifo
tests/fixtures/formats/stardict/02-syns/: syns.dict  syns.idx  syns.ifo  syns.syn
tests/fixtures/formats/text/: alts.txt  base.txt
tests/fixtures/formats/yomitan/: index.json
tests/formats/: json.rs  mdict.rs  mod.rs  roundtrip.rs  stardict.rs  text.rs  yomitan.rs
tests/models/: mod.rs
tests/models/yomitan/: conversion.rs  mod.rs  tag_bank.rs  term_bank.rs  term_meta_bank.rs
(+5 files in other folders)
