[package]
name = "pangloss"
version = "0.1.3"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/yomidevs/wiktionary-to-yomitan"
readme = "README.md"
description = "Glossary converter"
keywords = [
    "glossary",
    "dictionary",
    "conversion",
]

[lib]
name = "pangloss"
path = "src/lib.rs"
bench = false

[[bin]]
name = "pangloss"
path = "src/main.rs"
bench = false

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["std", "derive", "help", "usage", "error-context"], default-features = false }
indexmap = { version = "2.14.0", features = ["serde"], default-features = false }
serde_json = { version = "1.0.149", features = ["std"], default-features = false }
byteorder = "1"
glob = "0.3"
flate2 = { version = "1", default-features = false }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "chrono"] }
zip = { version = "8.6.0", features = ["deflate"], default-features = false }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["std", "derive"], default-features = false }
scraper = { version = "0.27.0", default-features = false }
rayon = { version = "1.12.0", default-features = false }
heck = "0.5.0"
ripemd = { version = "0.2.0", default-features = false }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
